platform/cluster/mongo-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: mongodb
  labels:
    app: mongo-express
    app.kubernetes.io/name: mongo-express
    app.kubernetes.io/part-of: platform
spec:
  type: ClusterIP
  selector:
    app: mongo-express
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
